force-app/main/default/objects/Lead/fields/Already_Done__c.field-meta.xml
<CustomField>
    <fullName>Already_Done__c</fullName>
    <label>Already Done</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>