force-app/main/default/objects/Lead/fields/Appointments__c.field-meta.xml
<CustomField>
    <fullName>Appointments__c</fullName>
    <label>Appointments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>