force-app/main/default/objects/Lead/fields/Business_Background__c.field-meta.xml
<CustomField>
    <fullName>Business_Background__c</fullName>
    <label>Business Background</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>