force-app/main/default/objects/Lead/fields/Business_Clients__c.field-meta.xml
<CustomField>
    <fullName>Business_Clients__c</fullName>
    <label>Business Clients</label>
    <type>TextArea</type>
</CustomField>