force-app/main/default/objects/Lead/fields/Business_Communication__c.field-meta.xml
<CustomField>
    <fullName>Business_Communication__c</fullName>
    <label>Business Communication</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>