force-app/main/default/objects/Lead/fields/Business_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Business_Competitors__c</fullName>
    <label>Business Competitors</label>
    <type>TextArea</type>
</CustomField>