force-app/main/default/objects/Lead/fields/Business_Culture__c.field-meta.xml
<CustomField>
    <fullName>Business_Culture__c</fullName>
    <label>Business Culture</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>