force-app/main/default/objects/Lead/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Business Model</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>