force-app/main/default/objects/Lead/fields/Business_Role_IT__c.field-meta.xml
<CustomField>
    <fullName>Business_Role_IT__c</fullName>
    <label>Business Role IT</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>