force-app/main/default/objects/Lead/fields/Business_Situation__c.field-meta.xml
<CustomField>
    <fullName>Business_Situation__c</fullName>
    <label>Business Situation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>