force-app/main/default/objects/Lead/fields/Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>Business_Structure__c</fullName>
    <label>Business Structure</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>