force-app/main/default/objects/Lead/fields/Business_Uniqueness__c.field-meta.xml
<CustomField>
    <fullName>Business_Uniqueness__c</fullName>
    <label>Business Uniqueness</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>