force-app/main/default/objects/Lead/fields/Can_Book__c.field-meta.xml
<CustomField>
    <fullName>Can_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Book</label>
    <type>Checkbox</type>
</CustomField>