force-app/main/default/objects/Lead/fields/Candidate_Before_Decision__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Before_Decision__c</fullName>
    <label>Candidate Before Decision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>