force-app/main/default/objects/Lead/fields/Career_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Career_Opportunities__c</fullName>
    <label>Career Opportunities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>