force-app/main/default/objects/Lead/fields/Chellange_for_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Chellange_for_Candidate__c</fullName>
    <label>Challenge for Candidate</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>