force-app/main/default/objects/Lead/fields/Current_Project__c.field-meta.xml
<CustomField>
    <fullName>Current_Project__c</fullName>
    <label>Current Project</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>