force-app/main/default/objects/Lead/fields/CV_Received__c.field-meta.xml
<CustomField>
    <fullName>CV_Received__c</fullName>
    <label>CV Received</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>