force-app/main/default/objects/Lead/fields/Decision_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Decision_Metrics__c</fullName>
    <label>Decision Metrics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>