force-app/main/default/objects/Lead/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>korter dan 2 weken</fullName>
            </value>
            <value>
                <fullName>2 tot 4 weken</fullName>
            </value>
            <value>
                <fullName>6 tot 12 maanden</fullName>
            </value>
            <value>
                <fullName>Meer dan 12 maanden</fullName>
            </value>
            <value>
                <fullName>Korter dan een maand</fullName>
            </value>
            <value>
                <fullName>1-3 maanden</fullName>
            </value>
            <value>
                <fullName>3-6 maanden</fullName>
            </value>
            <value>
                <fullName>Langer dan 6 maanden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>