force-app/main/default/objects/Lead/fields/Expected_Start__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start__c</fullName>
    <label>Expected Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>