force-app/main/default/objects/Lead/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geen voorkeur</fullName>
            </value>
            <value>
                <fullName>1 tot 3 years</fullName>
            </value>
            <value>
                <fullName>3 tot 5 years</fullName>
            </value>
            <value>
                <fullName>Meer dan 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>