force-app/main/default/objects/Lead/fields/Flexibility_Profile__c.field-meta.xml
<CustomField>
    <fullName>Flexibility_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexibility Profile</label>
    <type>Checkbox</type>
</CustomField>