force-app/main/default/objects/Lead/fields/Form_Content__c.field-meta.xml
<CustomField>
    <fullName>Form_Content__c</fullName>
    <label>Form Content</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>