force-app/main/default/objects/Lead/fields/Functie__c.field-meta.xml
<CustomField>
    <fullName>Functie__c</fullName>
    <label>Functie</label>
    <type>TextArea</type>
</CustomField>