force-app/main/default/objects/Lead/fields/Future_Projects__c.field-meta.xml
<CustomField>
    <fullName>Future_Projects__c</fullName>
    <label>Future Projects</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>