force-app/main/default/objects/Lead/fields/Good_Customer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Good_Customer_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Good Customer Relationship</label>
    <type>Checkbox</type>
</CustomField>