force-app/main/default/objects/Lead/fields/High_Urgency__c.field-meta.xml
<CustomField>
    <fullName>High_Urgency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Urgency</label>
    <type>Checkbox</type>
</CustomField>