force-app/main/default/objects/Lead/fields/Hiring_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hiring Agreed</label>
    <type>Checkbox</type>
</CustomField>