force-app/main/default/objects/Lead/fields/If_Not_Suitable__c.field-meta.xml
<CustomField>
    <fullName>If_Not_Suitable__c</fullName>
    <description>Price, Overtime, Stress, Deadlines, etc.</description>
    <label>If Not Suitable</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>