force-app/main/default/objects/Lead/fields/Is_Flexiable__c.field-meta.xml
<CustomField>
    <fullName>Is_Flexiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Flexiable</label>
    <type>Checkbox</type>
</CustomField>