force-app/main/default/objects/Lead/fields/IT_Landscape__c.field-meta.xml
<CustomField>
    <fullName>IT_Landscape__c</fullName>
    <label>IT Landscape</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>