force-app/main/default/objects/Lead/fields/IT_Teams__c.field-meta.xml
<CustomField>
    <fullName>IT_Teams__c</fullName>
    <label>IT Teams</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>