force-app/main/default/objects/Lead/fields/IT_Technologies__c.field-meta.xml
<CustomField>
    <fullName>IT_Technologies__c</fullName>
    <label>IT Technologies</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>