force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freelance</fullName>
                <default>true</default>
                <label>Freelance</label>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>