force-app/main/default/objects/Lead/fields/Long_term_Project__c.field-meta.xml
<CustomField>
    <fullName>Long_term_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long-term Project</label>
    <type>Checkbox</type>
</CustomField>