force-app/main/default/objects/Lead/fields/Looking_for__c.field-meta.xml
<CustomField>
    <fullName>Looking_for__c</fullName>
    <label>Looking for</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>