force-app/main/default/objects/Lead/fields/Normal_Approach__c.field-meta.xml
<CustomField>
    <fullName>Normal_Approach__c</fullName>
    <label>Normal Approach</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>