force-app/main/default/objects/Lead/fields/Often_Hire__c.field-meta.xml
<CustomField>
    <fullName>Often_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Often Hire</label>
    <type>Checkbox</type>
</CustomField>