force-app/main/default/objects/Lead/fields/On_loan__c.field-meta.xml
<CustomField>
    <fullName>On_loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-loan</label>
    <type>Checkbox</type>
</CustomField>