force-app/main/default/objects/Lead/fields/Personal_Development__c.field-meta.xml
<CustomField>
    <fullName>Personal_Development__c</fullName>
    <label>Personal Development</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>