force-app/main/default/objects/Lead/fields/Personal_Qualities__c.field-meta.xml
<CustomField>
    <fullName>Personal_Qualities__c</fullName>
    <label>Personal Qualities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>