force-app/main/default/objects/Lead/fields/Plain_Email__c.field-meta.xml
<CustomField>
    <fullName>Plain_Email__c</fullName>
    <label>Plain Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>