force-app/main/default/objects/Lead/fields/Profiles_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Deadline__c</fullName>
    <label>Profiles Deadline</label>
    <type>Date</type>
</CustomField>