force-app/main/default/objects/Lead/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>TEXT(Job__c) + TEXT(IF(High_Urgency__c, 1, 0)+IF(Candidate_can_be_Found__c, 1, 0)+IF(Technicaly_Right_Person__c, 1, 0)+IF( Without_CV__c, 1, 0)+IF( Buy_In__c, 1, 0)+IF( Have_Customers__c, 1, 0)+IF( Quick_Decisions__c, 1, 0)+IF( All_Involved__c, 1, 0)+IF( Available_for_Call__c, 1, 0)+IF( Flexibility_Profile__c, 1, 0)+IF( Flexibility_Process__c, 1, 0)+IF( C_Level_Job__c, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>