force-app/main/default/objects/Lead/fields/Response_in__c.field-meta.xml
<CustomField>
    <fullName>Response_in__c</fullName>
    <label>Response in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>