force-app/main/default/objects/Lead/fields/Strong_Sides__c.field-meta.xml
<CustomField>
    <fullName>Strong_Sides__c</fullName>
    <label>Strong Sides</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>