force-app/main/default/objects/Lead/fields/Submit_Everything__c.field-meta.xml
<CustomField>
    <fullName>Submit_Everything__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Everything</label>
    <type>Checkbox</type>
</CustomField>