force-app/main/default/objects/Lead/fields/Supervision_By__c.field-meta.xml
<CustomField>
    <fullName>Supervision_By__c</fullName>
    <label>Supervision By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>