force-app/main/default/objects/Lead/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>