force-app/main/default/objects/Lead/fields/Trining_By__c.field-meta.xml
<CustomField>
    <fullName>Trining_By__c</fullName>
    <label>Trining By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>