force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoekprofiel doorgeven</fullName>
            </value>
            <value>
                <fullName>Uurtarief opvragen</fullName>
            </value>
            <value>
                <fullName>Beschikbaarheid aanvragen</fullName>
            </value>
            <value>
                <fullName>Freelance opdrachten</fullName>
            </value>
            <value>
                <fullName>Vacatures</fullName>
            </value>
            <value>
                <fullName>Freelance en Vacatures</fullName>
            </value>
            <value>
                <fullName>Terugbelverzoek</fullName>
            </value>
            <value>
                <fullName>Vrijblijvende Offerte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>