force-app/main/default/objects/Lead/fields/Who_Makes_Decision__c.field-meta.xml
<CustomField>
    <fullName>Who_Makes_Decision__c</fullName>
    <label>Who Makes Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>