force-app/main/default/objects/Lead/fields/Work_Balance__c.field-meta.xml
<CustomField>
    <fullName>Work_Balance__c</fullName>
    <label>Work Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>