force-app/main/default/objects/Lead/fields/Work_Environment__c.field-meta.xml
<CustomField>
    <fullName>Work_Environment__c</fullName>
    <label>Work Environment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>