force-app/main/default/objects/Lead/fields/Working_method__c.field-meta.xml
<CustomField>
    <fullName>Working_method__c</fullName>
    <description>Principal, Ad-Hoc, Programmatic</description>
    <label>Working method</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>