force-app/main/default/objects/Lead/fields/Working_week__c.field-meta.xml
<CustomField>
    <fullName>Working_week__c</fullName>
    <label>Working week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>